# collision-detection-Part-B

./: CMakeLists.txt  README.md  UML-ClassDiagram.mdj  class Diagram-uml.drawio
docs/UML/: README.md
include/: Circle.hpp  PhysicsObject.hpp  PhysicsWorld.hpp  Polygon.hpp  Rectangle.hpp  Renderer.hpp
src/: Circle.cpp  PhysicsObject.cpp  PhysicsWorld.cpp  Polygon.cpp  Rectangle.cpp  main.cpp  test_installation.cpp
